syntax = "proto3";
package pb;

// enum 用户类型
enum UserType {
  UT_NORMAL = 0;
  UT_BRANCH_ADMIN = 1;
  UT_SYSTEM_ADMIN = 2;
}

// UserStatus 状态
enum UserStatus {
  US_NORMAL = 0;
  US_FROZEN = 1;
  US_DELETED = 2;
}

// 用户
message User {
  string id = 1;
  string name = 2;
  UserType type = 3;
  UserStatus status = 4;
  repeated int64 roles = 5;
}

// Permission 权限
message Permission {
  int64 id = 1;
  string name = 2;
  repeated string menus = 3;
  repeated string apis = 4;
}

// PermissionTreeNode 权限树节点
message PermissionTreeNode {
  Permission permission = 1;
  bool selected = 2;
  repeated PermissionTreeNode children = 3;
}

// PermissionList 权限列表
message PermissionList { repeated Permission list = 1; }

// 角色
message UserRole {
  int64 id = 1;
  string name = 2;
  string discription = 3;
  repeated Permission permissions = 4;
}

// 用户会话
message UserSession {
  string id = 1;
  string token = 2;
  UserType type = 3;
  UserStatus status = 4;
  repeated int64 roles = 5;
  int64 deadline = 6;
}
